# gpuowl

src/: Buffer.h  CMakeLists.txt  File.h  Gpu.cpp  Hash.h  KernelCompiler.cpp  Proof.cpp  Saver.cpp  TrigBufCache.cpp  TuneEntry.cpp  clwrap.cpp  shared.h  state.cpp  state.h  tune.cpp  typeName.h
src/cl/: math.cl
